# nmpde-QiaoTramacereWang

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/: copilot-instructions.md
archive/old_include/wave_solver/: CGWaveSolver2D.hpp  CGWaveSolver2DParallel.hpp  EnergyCalculator.hpp  ProblemBase.hpp  VTKOutput.hpp
archive/old_scripts/: visualize_wave_1D.py  visualize_wave_2D.py
archive/old_src/Problems/: Gaussian2DPulse.cpp
archive/old_src/Utilities/: EnergyCalculator.cpp  VTKOutput.cpp
archive/old_src/apps/: main_1d.cpp  main_2d.cpp  test_convergence_space.cpp  test_convergence_space_2d.cpp  test_convergence_spacetime_2d.cpp  test_convergence_time_2d.cpp  test_mms.cpp  wave_2d_parallel.cpp
archive/old_src/cg/: CGWaveSolver2D.cpp
include/: Wave.hpp
include/wave_solver/: CGWaveSolver.hpp  ErrorComputer.hpp  VTKOutput.hpp  WaveSolverBase.hpp
results/dispersion/: dispersion_summary.csv
results/dissipation/: dissipation_summary.csv
results/dissipation/energy/: energy_m1_n1_th0p5_dt0p025_T10.csv  energy_m1_n1_th0p5_dt0p05_T10.csv  energy_m1_n1_th0p5_dt0p1_T10.csv  energy_m1_n1_th0p75_dt0p025_T10.csv  energy_m1_n1_th0p75_dt0p05_T10.csv  energy_m1_n1_th0p75_dt0p1_T10.csv  energy_m1_n1_th1_dt0p025_T10.csv  energy_m1_n1_th1_dt0p05_T10.csv  energy_m1_n1_th1_dt0p1_T10.csv  energy_m2_n2_th0p5_dt0p025_T10.csv  energy_m2_n2_th0p5_dt0p05_T10.csv  energy_m2_n2_th0p5_dt0p1_T10.csv  energy_m2_n2_th0p75_dt0p025_T10.csv  energy_m2_n2_th0p75_dt0p05_T10.csv  energy_m2_n2_th0p75_dt0p1_T10.csv  energy_m2_n2_th1_dt0p025_T10.csv  energy_m2_n2_th1_dt0p05_T10.csv  energy_m2_n2_th1_dt0p1_T10.csv  energy_m4_n4_th0p5_dt0p025_T10.csv  energy_m4_n4_th0p5_dt0p05_T10.csv  energy_m4_n4_th0p5_dt0p1_T10.csv  energy_m4_n4_th0p75_dt0p025_T10.csv  energy_m4_n4_th0p75_dt0p05_T10.csv  energy_m4_n4_th0p75_dt0p1_T10.csv  energy_m4_n4_th1_dt0p025_T10.csv  energy_m4_n4_th1_dt0p05_T10.csv  energy_m4_n4_th1_dt0p1_T10.csv
scripts/: derive_manufactured_solution.py  generate_2D_meshes.py  generate_square_meshes_by_N.py  plot_dispersion.py  plot_dissipation.py  plot_space_convergence.py  plot_time_convergence.py  visualize_meshes.py  visualize_wave.py  visualize_wave_1D.py  visualize_wave_1d.py  visualize_wave_2d.py
src/: DispersionStudy.cpp  DissipationStudy.cpp  Main.cpp  SpaceConvergence.cpp  TimeConvergence.cpp  Wave.cpp
src/OtherImplementation/src/: Main.cpp  Wave.cpp  Wave.hpp
src/apps/: test_convergence_space.cpp  test_convergence_spacetime.cpp  test_convergence_time.cpp  test_mms.cpp  test_mms_2d.cpp
src/cg/: CGWaveSolver.cpp  CGWaveSolver2DParallel.cpp
src/core/Problems/: GaussianPulse.cpp  ManufacturedSolution.cpp  ManufacturedSolution2D.cpp
src/core/Utilities/: VTKOutput.cpp
